added bookings css & html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li><a href="#"></a>Home</li>
             <li><a href="#"></a>Profile</li>
             <li><a href="#"></a>Movies</li>
-            <li><a href="#"></a>Bookings</li>
+            <li><a href="bookings.html"></a>Bookings</li>
             <li><a href="#"></a>About Us</li>
         </ul>
         <div class="search">
