modified landing and booking page

--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
     </head>
     <body>
         <header>
-            <a href="#" class="logo">CineBio</a>
-            </ul>
+            <a href="index.html" class="logo">CineBio</a>
             <ul class="nav">
-            <li><a href="#"></a>Home</li>
-            <li><a href="#"></a>Profile</li>
-            <li><a href="#"></a>Movies</li>
-            <li><a href="bookings.html"></a>Bookings</li>
-            <li><a href="#"></a>About Us</li>
-        </ul>
-        <div class="search">
-            <input type="text" placeholder="Search">
-            <i class="fa fa-search" aria-hidden="true"></i>
-        </div>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">Profile</a></li>
+                <li><a href="#">Movies</a></li>
+                <li><a href="bookings.html">Bookings</a></li>
+                <li><a href="#">About Us</a></li>
+            </ul>
+            <div class="search">
+                <input type="text" placeholder="Search">
+                <i class="fa fa-search" aria-hidden="true"></i>
+            </div>
         </header>
+
         <div class="banner">
             <div class="content active">
                 <img 
@@ -155,6 +155,8 @@
                     </div>
                 </div>
             </div>
+
+
             <a href="#" class="play"><i class="fa fa-play-circle-o" aria-hidden="true"></i> Watch Trailer</a> 
         </div>
         <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
@@ -165,5 +167,10 @@
                 $('.carousel').carousel();
             });     
         </script>
+            <footer class="page-footer">
+                <div class="container">
+                    <p class="center-align">© 2024 CineBio. All rights reserved.</p>
+                </div>
+            </footer>
     </body>
 </html>
