change color of book button

--- a/bookings.html
+++ b/bookings.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"/>
-    <link rel="stylesheet" href="./css/main.css" /> <!-- Change this to bookings.css -->
+    <link rel="stylesheet" href="./css/main.css" />
     <title>Booking History</title>
 </head>
 <body>
@@ -18,6 +18,10 @@
             <li><a href="bookings.html">Bookings</a></li>
             <li><a href="#">About Us</a></li>
         </ul>
+        <div class="search">
+            <input type="text" placeholder="Search">
+            <i class="fa fa-search" aria-hidden="true"></i>
+        </div>
     </header>
     
     <div class="bookings-banner">
@@ -40,7 +44,7 @@
                         <p><strong>Seats:</strong> A12, A13</p>
                     </div>
                     <div class="card-action">
-                        <a href="#" class="btn-small red lighten-2"><i class="fa fa-trash" aria-hidden="true"></i> Cancel Booking</a>
+                        <a href="#" class="btn-small red-color"><i class="fa fa-trash" aria-hidden="true"></i> Cancel Booking</a>
                     </div>
                 </div>
             </div>
@@ -58,7 +62,7 @@
                         <p><strong>Seats:</strong> B5, B6</p>
                     </div>
                     <div class="card-action">
-                        <a href="#" class="btn-small red lighten-2"><i class="fa fa-trash" aria-hidden="true"></i> Cancel Booking</a>
+                        <a href="#" class="btn-small red-color"><i class="fa fa-trash" aria-hidden="true"></i> Cancel Booking</a>
                     </div>
                 </div>
             </div>
@@ -76,7 +80,7 @@
                         <p><strong>Seats:</strong> C3, C4</p>
                     </div>
                     <div class="card-action">
-                        <a href="#" class="btn-small red lighten-2"><i class="fa fa-trash" aria-hidden="true"></i> Cancel Booking</a>
+                        <a href="#" class="btn-small red-color"><i class="fa fa-trash" aria-hidden="true"></i> Cancel Booking</a>
                     </div>
                 </div>
             </div>
@@ -94,7 +98,7 @@
                         <p><strong>Seats:</strong> D1, D2</p>
                     </div>
                     <div class="card-action">
-                        <a href="#" class="btn-small red lighten-2"><i class="fa fa-trash" aria-hidden="true"></i> Cancel Booking</a>
+                        <a href="#" class="btn-small red-color"><i class="fa fa-trash" aria-hidden="true"></i> Cancel Booking</a>
                     </div>
                 </div>
             </div>
@@ -112,7 +116,7 @@
                         <p><strong>Seats:</strong> E1, E2</p>
                     </div>
                     <div class="card-action">
-                        <a href="#" class="btn-small red lighten-2"><i class="fa fa-trash" aria-hidden="true"></i> Cancel Booking</a>
+                        <a href="#" class="btn-small red-color"><i class="fa fa-trash" aria-hidden="true"></i> Cancel Booking</a>
                     </div>
                 </div>
             </div>
