fixed navbar + added movies page

--- a/bookings.html
+++ b/bookings.html
@@ -9,20 +9,8 @@
     <title>Booking History</title>
 </head>
 <body>
-    <header>
-        <a href="index.html" class="logo">CineBio</a>
-        <ul class="nav">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#">Profile</a></li>
-            <li><a href="#">Movies</a></li>
-            <li><a href="bookings.html">Bookings</a></li>
-            <li><a href="#">About Us</a></li>
-        </ul>
-        <div class="search">
-            <input type="text" placeholder="Search">
-            <i class="fa fa-search" aria-hidden="true"></i>
-        </div>
-    </header>
+    <!--Display Navigation Bar-->
+    <div class="NavBarContainer"></div>
     
     <div class="bookings-banner">
         <h2 class="bookings-banner-title">Your Booking History</h2>
@@ -129,4 +117,5 @@
         </div>
     </footer>
 </body>
+<script src="js/navbar.js"></script>
 </html>
