added js code for seating

--- a/movies.html
+++ b/movies.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="./font-awesome/css/font-awesome.min.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"/>
         <link rel="stylesheet" href="css/movies.css">
-        <title>CineBio Booking Page</title>
+        <title>CineBio Movies Page</title>
     </head>
     <body>
         <!--Display Navigation Bar-->
