--- a/bookings.html
+++ b/bookings.html
@@ -30,6 +30,7 @@
                         <p><strong>Date:</strong> October 15, 2024</p>
                         <p><strong>Time:</strong> 7:00 PM</p>
                         <p><strong>Seats:</strong> A12, A13</p>
+                        <p><strong>Cinema:</strong> 1</p>
                     </div>
                     <div class="card-action">
                         <a href="#" class="btn-small red-color"><i class="fa fa-trash" aria-hidden="true"></i> Cancel Booking</a>
@@ -48,6 +49,7 @@
                         <p><strong>Date:</strong> November 2, 2024</p>
                         <p><strong>Time:</strong> 9:00 PM</p>
                         <p><strong>Seats:</strong> B5, B6</p>
+                        <p><strong>Cinema:</strong> 2</p>
                     </div>
                     <div class="card-action">
                         <a href="#" class="btn-small red-color"><i class="fa fa-trash" aria-hidden="true"></i> Cancel Booking</a>
@@ -66,6 +68,7 @@
                         <p><strong>Date:</strong> December 20, 2024</p>
                         <p><strong>Time:</strong> 5:00 PM</p>
                         <p><strong>Seats:</strong> C3, C4</p>
+                        <p><strong>Cinema:</strong> 3</p>
                     </div>
                     <div class="card-action">
                         <a href="#" class="btn-small red-color"><i class="fa fa-trash" aria-hidden="true"></i> Cancel Booking</a>
@@ -84,6 +87,7 @@
                         <p><strong>Date:</strong> January 5, 2025</p>
                         <p><strong>Time:</strong> 8:30 PM</p>
                         <p><strong>Seats:</strong> D1, D2</p>
+                        <p><strong>Cinema:</strong> 4</p>
                     </div>
                     <div class="card-action">
                         <a href="#" class="btn-small red-color"><i class="fa fa-trash" aria-hidden="true"></i> Cancel Booking</a>
@@ -102,6 +106,7 @@
                         <p><strong>Date:</strong> February 10, 2025</p>
                         <p><strong>Time:</strong> 6:00 PM</p>
                         <p><strong>Seats:</strong> E1, E2</p>
+                        <p><strong>Cinema:</strong> 5</p>
                     </div>
                     <div class="card-action">
                         <a href="#" class="btn-small red-color"><i class="fa fa-trash" aria-hidden="true"></i> Cancel Booking</a>
