minor changes uli

--- a/movies.html
+++ b/movies.html
@@ -29,10 +29,6 @@
         </div>
         <div class="cinemabooking-page">
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-            <!--<div class="HiddenFieldDataHere" id="selectedSeatsData" runat="server" style="display: none"></div>
-            <div class="HiddenFieldDataHere3" id="occupiedSeatsData" runat="server" style="display: none"></div>
-            <div class="HiddenFieldDataName2" id="userLoggedIn" runat="server" style="display: none"></div>
-            <asp:HiddenField ID="hdnGeneratedData" runat="server" />-->
 
             <div class="cinema-seating">
                 <link rel="stylesheet" href="css/seatings.css">
@@ -71,7 +67,7 @@
                                     <th>Seat No.</th>
                                 </tr>
                             </thead>
-                            <tbody><!-- Rows will be dynamically added here --></tbody>
+                            <tbody></tbody>
                         </table>
                     </div>
                 </div>
