minor changes in seatings layout

--- a/movie-viewer.html
+++ b/movie-viewer.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./font-awesome/css/font-awesome.min.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"/>
-        <link rel="stylesheet" href="css/movies.css">
+        <link rel="stylesheet" href="css/movie-viewer.css">
         <title>CineBio Movies Page</title>
     </head>
     <body>
@@ -29,6 +29,11 @@
         </div>
         <div class="cinemabooking-page">
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+            <!--For Users Only-->
+            <!--<div class="movieimg-container">
+                <img src="images\movies\inside-out-2.png" alt="movie-img" />
+            </div>-->
 
             <div class="cinema-seating">
                 <link rel="stylesheet" href="css/seatings.css">
