show admin/user functions

--- a/movie-viewer.html
+++ b/movie-viewer.html
@@ -20,16 +20,16 @@
                     <div class="timeslot active">2:30pm-4:10pm</div>
                     <div class="timeslot">5:20pm-7:00pm</div>
                 </div>
+                <div class="sidepage-summary"></div>
                 <label class="sidepage-margin-text">Selected Seats (<label class="selectedSeats">0</label>):</label>
                 <div class="sidepage-center-text" id="selectedSeatDisplay">None</div>
                 <label class="sidepage-margin-text">Price:</label>
                 <div class="sidepage-center-text">₱0.00</div>
             </div>
+            <!--<label class="generatedNumber">testing</label>-->
             <button class="btnSeats" onclick="executeSubmit()">Book Seats</button>
         </div>
         <div class="cinemabooking-page">
-            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
             <!--For Users Only-->
             <!--<div class="movieimg-container">
                 <img src="images\movies\inside-out-2.png" alt="movie-img" />
@@ -79,6 +79,8 @@
             </div>
         </div>
     </body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/navbar.js"></script>
     <script src="js/seatings.js"></script>
+    <script src="js/payment.js"></script>
 </html>
