--- a/movie-booking.html
+++ b/movie-booking.html
@@ -22,19 +22,21 @@
             <!-- Inside Out 2 Booking -->
             <div class="col s12 m6 l4">
                 <div class="card">
-                    <div class="card-image">
-                        <img src="./images/movies/inside-out-2-poster.jfif" alt="Inside Out 2">
-                        <span class="card-title">Inside Out 2</span>
-                    </div>
-                    <div class="card-content">
-                        <p><strong>Date:</strong> October 15, 2024</p>
-                        <p><strong>Time:</strong> 7:00 PM</p>
-                        <p><strong>Seats:</strong> A12, A13</p>
-                        <p><strong>Cinema:</strong> 1</p>
-                    </div>
-                    <div class="card-action">
-                        <a href="#" class="btn-small red-color"><i class="fa fa-trash" aria-hidden="true"></i> Cancel Booking</a>
-                    </div>
+                    <a href="movie-viewer.html">
+                        <div class="card-image">
+                            <img src="./images/movies/inside-out-2-poster.jfif" alt="Inside Out 2">
+                            <span class="card-title">Inside Out 2</span>
+                        </div>
+                        <div class="card-content">
+                            <p><strong>Date:</strong> October 15, 2024</p>
+                            <p><strong>Time:</strong> 7:00 PM</p>
+                            <p><strong>Seats:</strong> A12, A13</p>
+                            <p><strong>Cinema:</strong> 1</p>
+                        </div>
+                        <div class="card-action">
+                            <a href="#" class="btn-small red-color"><i class="fa fa-trash" aria-hidden="true"></i> Cancel Booking</a>
+                        </div>
+                    </a>
                 </div>
             </div>
     
