--- a/homepage.html
+++ b/homepage.html
@@ -162,4 +162,6 @@
             </footer>
     </body>
     <script src="js/navbar.js"></script>
+    <script src="js/home-page.js"></script>
+    <script src="js/main.js"></script>
 </html>
