updated movie-viewer page + navbar

--- a/movie-viewer.html
+++ b/movie-viewer.html
@@ -21,7 +21,7 @@
                     <div class="timeslot">5:20pm-7:00pm</div>
                 </div>
                 <div>
-                    <label class="sidepage-margin-text">Date:</label>
+                    <label class="sidepage-text2">Date:</label>
                     <select class="date-select" id="date-select">
                         <option value="2024-10-29">October 29, 2024</option>
                         <option value="2024-10-30">October 30, 2024</option>
@@ -36,7 +36,7 @@
                 <div class="sidepage-center-text price-textcontent">₱0.00</div>
             </div>
             <!--<label class="generatedNumber">testing</label>-->
-            <button class="btnSeats" onclick="executeSubmit()">Book Seats</button>
+            <button class="btnSeats" onclick="BookTickets()">Book Seats</button>
         </div>
         <div class="cinemabooking-page">
             <!--For Users Only-->
@@ -75,10 +75,10 @@
                         <table id="seatingTable">
                             <thead>
                                 <tr>
-                                    <th>Registration Number</th>
-                                    <th>Face Photo</th>
                                     <th>Name</th>
+                                    <th>Face Photo</th>
                                     <th>Seat No.</th>
+                                    <th>Quantity No.</th>
                                 </tr>
                             </thead>
                             <tbody></tbody>
