fixed movies&bookings page

--- a/movie-viewer.html
+++ b/movie-viewer.html
@@ -13,7 +13,7 @@
         <div class="NavBarContainer"></div>
 
         <div class="cinemabooking-sidepage">
-            <label class="cinema-number">Cinema #</label>
+            <label class="cinema-number">Cinema &nbsp;1</label>
             <div class="timeslots-container">
                 <label class="sidepage-text">Time Slot:</label>
                 <div class="timeslots-content">
@@ -47,7 +47,7 @@
             <div class="cinema-seating">
                 <link rel="stylesheet" href="css/seatings.css">
 
-                <div class="title">Movie Name</div>
+                <div class="title">Inside Out 2</div>
                 <div class="screentext">ALL EYES HERE</div>
 
                 <div class="DivisionContainer"></div>
