--- a/movie-viewer.html
+++ b/movie-viewer.html
@@ -88,6 +88,11 @@
             </div>
         </div>
     </body>
+    <!-- <footer class="page-footer">
+        <div class="container">
+            <p class="center-align">© 2024 CineBio. All rights reserved.</p>
+        </div>
+    </footer> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/navbar.js"></script>
     <script src="js/movie-viewer.js"></script>
