switch pages admin and user

--- a/movie-viewer.html
+++ b/movie-viewer.html
@@ -78,7 +78,7 @@
                                     <th>Name</th>
                                     <th>Face Photo</th>
                                     <th>Seat No.</th>
-                                    <th>Quantity No.</th>
+                                    <th>Quantity</th>
                                 </tr>
                             </thead>
                             <tbody></tbody>
