--- a/profile.html
+++ b/profile.html
@@ -18,6 +18,7 @@
             </div>
             <div class="right">
                 <div class="info">
+                    <h3>Profile</h3>
                     <h3>Information</h3>
                     <div class="info_data">
                         <div class="data">
