added bookings API *tbc

--- a/movie-booking.html
+++ b/movie-booking.html
@@ -13,10 +13,7 @@
     <!--Display Navigation Bar-->
     <div class="NavBarContainer"></div>
     
-    <div class="bookings-banner">
-        <h2 class="bookings-banner-title">Your Booking History</h2>
-        <p class="bookings-banner-description">View the details of your previous bookings below:</p>
-    </div>
+    <div class="BookingsBannerContainer"></div>
 
     <main class="MainContainer"></main>    
 
