functioning profile page and booking DB

--- a/profile.html
+++ b/profile.html
@@ -14,7 +14,7 @@
         <div class="wrapper">
             <div class="left">
                 <img src="images/birb.jpeg" alt="user" width="100">
-                <h4>Yellow Birb</h4>
+                <h4 id="profile-uName">Yellow Birb</h4>
             </div>
             <div class="right">
                 <div class="info">
@@ -23,19 +23,19 @@
                     <div class="info_data">
                         <div class="data">
                             <h4>First Name</h4>
-                            <p>Yellow</p>
+                            <p id="profile-fName">Yellow</p>
                         </div>
                         <div class="data">
                             <h4>Last Name</h4>
-                            <p>Birb</p>
+                            <p id="profile-lName">Birb</p>
                         </div>
                         <div class="data">
                             <h4>Email</h4>
-                            <p>birb@gmail.com</p>
+                            <p id="profile-email">birb@gmail.com</p>
                         </div>
                         <div class="data">
                             <h4>Cellphone Number</h4>
-                            <p>09123456789</p>
+                            <p id="profile-cellNo">09123456789</p>
                         </div>
                     </div>
                 </div>
