functioning booking history

--- a/booking-history.html
+++ b/booking-history.html
@@ -30,17 +30,10 @@
                 </thead>
                 <tbody>
                     <tr> <!--PLACEHOLDER 1-->
-                        <td>Inside Out 2</td>
-                        <td>A12, A13</td>
-                        <td>7:00 PM</td>
-                        <td>2</td>
-                        <td><button class="btn-small red-color"><i class="far fa-bell" style="font-size: 14px;"></i>&nbsp;&nbsp;Remind Me</button></td>
-                    </tr>
-                    <tr> <!--PLACEHOLDER 2-->
-                        <td>Deadpool and Wolverine</td>
-                        <td>C8</td>
-                        <td>9:00 PM</td>
-                        <td>1</td>
+                        <td id="movie-title">Inside Out 2</td>
+                        <td id="seatNo">A12, A13</td>
+                        <td id="movieTime">7:00 PM</td>
+                        <td id="seatCount">2</td>
                         <td><button class="btn-small red-color"><i class="far fa-bell" style="font-size: 14px;"></i>&nbsp;&nbsp;Remind Me</button></td>
                     </tr>
                 </tbody>
@@ -49,13 +42,8 @@
 
     </div>    
     
-
-    <footer class="page-footer">
-        <div class="container">
-            <p class="center-align">© 2024 CineBio. All rights reserved.</p>
-        </div>
-    </footer>
 </body>
 <script src="js/navbar.js"></script>
-<script src="js/booking-history.js"></script>
+<script src="movie-booking.js"></script>
+<script src="js/script.js"></script>
 </html>
