added seating info API

--- a/movie-viewer.html
+++ b/movie-viewer.html
@@ -79,6 +79,8 @@
                             <thead>
                                 <tr>
                                     <th>Name</th>
+                                    <th>Date</th>
+                                    <th>Time</th>
                                     <th>Seat No.</th>
                                     <th>Quantity</th>
                                 </tr>
@@ -106,7 +108,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/navbar.js"></script>
     <script src="js/movie-viewer.js"></script>
-    <script src="js/payment.js"></script>
     <script src="js/script.js"></script>
     <script src="js/camera.js"></script>
 </html>
