fixed image saving

--- a/movie-viewer.html
+++ b/movie-viewer.html
@@ -101,7 +101,10 @@
                     <canvas id="canvas"></canvas>
                 </div>
             </div>
-            <button class="takePicturebtn" id="capture">Take Picture&nbsp;&nbsp;<i class="fa-solid fa-camera"></i></button>
+            <div class="button-container">
+                <button class="takePicturebtn" id="capture">Take Picture&nbsp;&nbsp;<i class="fa-solid fa-camera"></i></button>
+                <button class="uploadPicturebtn" id="upload">Upload Picture&nbsp;&nbsp;<i class="fa-solid fa-camera"></i></button>
+            </div>
         </div>
     </div>
     </body>
@@ -110,4 +113,5 @@
     <script src="js/movie-viewer.js"></script>
     <script src="js/script.js"></script>
     <script src="js/camera.js"></script>
+    <script src="js/server.js"></script>
 </html>
